Package triangulation: provides triangulations Delaunay triangulations, 
constrained and regular triangulations with  tests and examples.


5 avril 2004 Mariette Yvinec
- fixed a bug in Triangulation_hierarchy_vertex_base_2
  (bug intoduced last week : abusive comment of a typedef)

31 March 2004 Mariette Yvinec
- Weighted_point : remake the constructor from Point implicit 
  otherwise member functions of the base triangulationclass
 cannot be called with Bare_points.
- Replace the typedef or Regular_triangulation_euclidean_traits :
  typedef Weighted_point                        Point_2;
  by a Weighted_point_mapper_2.
  This will be necessary to adapt to Kernel traits when Weighted_point
  will be in Kernel 
  but  this does not solve satisfactory the  Weighted_point_2 - Point_2
  type problem of regular, hence the need for the implicit converter.

25 March 2004 Radu Ursu
- made doc work with the new implementation of Manual tools.

25 February 2004 Sylvain Pion
- Make cw and ccw public in Delaunay_2.

19 February 2004 Sylvain Pion
- Weighted_point :
  - make constructor explicit, 
  - make .weight() and .point() return references,
  - protect operator>> against end of steram.

?? February 2004 Mariette Yvinec
- fixed the return of get_conflicts_and_boundary member functions
- suppressed the using Tds::cw[ccw]
   added by Menelaus in Delaunnay_triangulation_2

10 February 2004 Radu Ursu
-Updated headers in examples

ver 8.37 (1/2/04) [mk]
- added this-> before some inherited methods in Delaunay_triangulation_2
  and Triangulation_hierarchy_2; gcc 3.4 was complaining about it 

ver 8.36 (1/2/04) [mk]
- added this-> before some inherited methods in ds vertex and ds face base;
  gcc 3.4 was complaining

ver 8.34 (22/1/04)
- Fix Regular (missing #includes).

ver 8.33 (22/1/04)
- small fixes due to previous changes of NULL to handles default constructors 

ver 8.33 (21/1/04)
- changed NULL to default constructed handles.